envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: [ "*" ]
                      routes:
                        - match:
                            prefix: "/service1/"
                          route:
                            cluster: service1
                        - match:
                            prefix: "/service2/"
                          route:
                            cluster: service2
                          request_headers_to_add:
                            - header:
                                key: "x-require-auth"
                                value: "true"
                              append: false
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      http_service:
                        server_uri:
                          uri: http://opa:8181
                          cluster: opa
                          timeout: 1s
                        path_prefix: "/v1/data/envoy/authz"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: service1
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      connect_timeout: 0.25s
      load_assignment:
        cluster_name: service1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service1
                      port_value: 80
    - name: service2
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      connect_timeout: 0.25s
      load_assignment:
        cluster_name: service2
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service2
                      port_value: 80
    - name: opa
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      connect_timeout: 0.25s
      load_assignment:
        cluster_name: opa
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: opa
                      port_value: 8181
